cka/network-policy/egress-allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-all 
spec:
  # Apply policy to the selector matched Pods
  podSelector:
    matchLabels:
      k8s-app: nginx
  # Policy Type
  policyType:
  - Egress
  egress:
  - {}
