cka/network-policy/ingress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
spec:
  # Apply policy to the selector matched Pods
  podSelector:
    matchLabels:
      k8s-app: http
  # Policy Type
  policyTypes:
  - Ingress
